test/neg/neg-serial4.errc
UPCXX_SERIALIZED_BASE.Type. within UPCXX_SERIALIZED_VALUES..... requires Type not be abstract
